--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "jquery-ui-dist": "^1.13.2",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
