--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "bootstrap": "^5.3.2",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
     "vue3-print-nb": "^0.1.4"
   },
   "devDependencies": {
@@ -20,6 +19,7 @@
     "@vue/test-utils": "^2.4.1",
     "jsdom": "^22.1.0",
     "vite": "^4.4.9",
-    "vitest": "^0.34.4"
+    "vitest": "^0.34.4",
+    "vue-router": "^4.2.5"
   }
 }
