--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "pinia": "^2.1.6",
+    "sweetalert": "^2.1.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vue3-print-nb": "^0.1.4"
